tests/custom/STARIS_2022/operation-type-errors/parts-type-error/stderr.expected
Error:
    parts-type-error.essence:2:34:
  |
2 | b = ({{1,2},{3},{4,5,6}} = parts(false))
  |                                  ^^^^^
Type error:
	Expected: partition from ?
	Got: bool

cat: *.solution: No such file or directory
